<resources>
    <string name="app_name">IdeaBook</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="new_here_register_here">New Here? Register here!</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">No Account?</string>
    <string name="create_one">Create one</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Indrajits Header</string>
    <string name="nav_header_subtitle">Indrajits Subtitle</string>
    <string name="nav_header_desc">##Navigation header##</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_mypost">My post</string>
    <string name="menu_settings">Settings</string>


    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
</resources>