<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="32dp"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/round_bg"
        android:drawableLeft="@drawable/ic_login"
        android:drawablePadding="12dp"
        android:paddingLeft="115dp"
        android:text="@string/sign_in"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Don't have an Account? "
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/gotoSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sign up"
            android:textColor="@color/colorGoto" />
    </LinearLayout>

</LinearLayout>